--- a/css/resume.css
+++ b/css/resume.css
@@ -4,9 +4,10 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-resume/blob/master/LICENSE)
  */
 body {
-  font-family: 'Open Sans', serif;
-  padding-top: 54px;
-  color: #868e96; }
+    font-family: 'Open Sans', serif;
+    padding-top: 54px;
+    color: #ebebeb;
+}
 
 @media (min-width: 992px) {
   body {
@@ -104,7 +105,8 @@ section.resume-section {
     padding-bottom: 3rem !important; } }
 
 .bg-primary {
-  background-color: #BD5D38 !important; }
+    background-color: #454545 !important;
+}
 
 .text-primary {
   color: #BD5D38 !important; }
