--- a/css/resume.css
+++ b/css/resume.css
@@ -115,3 +115,30 @@ a {
   color: #BD5D38; }
   a:hover, a:focus, a:active {
     color: #824027; }
+
+
+.bg-secondary {
+    background-color: #121212 !important;
+}
+
+tools-list {
+    font-size: 12px;
+}
+
+.progress-label{
+    float: left;
+    margin-right: 1em;
+}
+
+.progress-holder{
+    overflow: hidden;
+}
+
+.progress {
+    vertical-align: middle;
+    background-color: #303030;
+}
+
+.progress-bar {
+    background-color: #BD5D38;
+}
