--- a/css/resume.css
+++ b/css/resume.css
@@ -23,7 +23,7 @@ h6 {
   font-family: 'Saira Extra Condensed', serif;
   font-weight: 700;
   text-transform: uppercase;
-  color: #343a40; }
+  color: #c2c2c2; }
 
 h1 {
   font-size: 6rem;
