--- a/css/resume.css
+++ b/css/resume.css
@@ -6,13 +6,17 @@
 body {
     font-family: 'Open Sans', serif;
     padding-top: 54px;
-    color: #ebebeb;
+    color: #ffffff;
+    background-color: #121212;
+    max-width: 1000px;
+    text-align: center;
+    margin: auto;
 }
 
-@media (min-width: 992px) {
-  body {
-    padding-top: 0;
-    padding-left: 17rem; } }
+@font-face{
+    font-family: 'nes';
+    src: url('nes.ttf');
+}
 
 h1,
 h2,
@@ -20,10 +24,10 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Saira Extra Condensed', serif;
+  font-family: 'nes', serif;
   font-weight: 700;
   text-transform: uppercase;
-  color: #c2c2c2; }
+  color: #ffffff; }
 
 h1 {
   font-size: 6rem;
@@ -31,6 +35,12 @@ h1 {
 
 h2 {
   font-size: 3.5rem; }
+
+.nav-item{
+    font-family: nes, serif;
+    padding-inline: 10px;
+}
+
 
 .subheading {
   text-transform: uppercase;
@@ -50,66 +60,19 @@ h2 {
   .list-icons .list-inline-item i:hover {
     color: #BD5D38; }
 
-#sideNav .navbar-nav .nav-item .nav-link {
-  font-weight: 600;
-  text-transform: uppercase; }
-
-@media (min-width: 992px) {
-  #sideNav {
-    text-align: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    width: 17rem;
-    height: 100vh; }
-    #sideNav .navbar-brand {
-      display: flex;
-      margin: auto auto 0;
-      padding: 0.5rem; }
-      #sideNav .navbar-brand .img-profile {
-        max-width: 10rem;
-        max-height: 10rem;
-        border: 0.5rem solid rgba(255, 255, 255, 0.2); }
-    #sideNav .navbar-collapse {
-      display: flex;
-      align-items: flex-start;
-      flex-grow: 0;
-      width: 100%;
-      margin-bottom: auto; }
-      #sideNav .navbar-collapse .navbar-nav {
-        flex-direction: column;
-        width: 100%; }
-        #sideNav .navbar-collapse .navbar-nav .nav-item {
-          display: block; }
-          #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
-            display: block; } }
 
 section.resume-section {
-  border-bottom: 1px solid #dee2e6;
   padding-top: 5rem !important;
   padding-bottom: 5rem !important; }
   section.resume-section .resume-item .resume-date {
     min-width: none; }
 
-@media (min-width: 768px) {
-  section.resume-section {
-    min-height: 100vh; }
-    section.resume-section .resume-item .resume-date {
-      min-width: 18rem; } }
-
-@media (min-width: 992px) {
-  section.resume-section {
-    padding-top: 3rem !important;
-    padding-bottom: 3rem !important; } }
-
 .bg-primary {
-    background-color: #454545 !important;
+    background-color: #121212 !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important; }
+  color: #ffffff !important; }
 
 a {
   color: #BD5D38; }
@@ -144,10 +107,61 @@ tools-list {
 }
 
 .portfolio-item {
-    background-color: #2e2e2e;
     box-sizing: border-box;
     width: 95%;
-    height: 500px;
-    border-radius: 5%;
-    padding: 18px;
+    height: 550px;
+    padding: 5%;
+    background-color: #181818;
+}
+
+.featured-item {
+    border: 15px solid transparent;
+    border-image: url(borderF.png) 30 round;
+    padding: 10px;
+    background-image: url(bg.png);
+    background-repeat: repeat;
+    background-size: 350px;
+    border-radius: 20px;
+}
+
+.featured-item-component {
+    border: 10px solid transparent;
+    border-image: url(borderE.png) 30 round;
+    padding: 10px;
+    background-color: black;
+    border-radius: 5px;
+}
+
+.skill-item{
+    background-color: #2e2e2e;
+    box-sizing: border-box;
+    padding: 8px;
+    border-radius: 8px;
+}
+
+.skill-item:hover{
+    background-color: #3e3e3e;
+}
+
+.border-primary{
+    border: 30px solid transparent;
+    border-image: url(borderA.png) 30 round;
+    padding: 15px;
+}
+
+.border-secondary {
+    border: 20px solid transparent;
+    border-image: url(borderB.png) 30 round;
+    padding: 15px;
+}
+
+.border-menu-primary {
+    border: 30px solid transparent;
+    border-image: url(borderC.png) 30 round;
+}
+
+.border-3 {
+    border: 20px solid transparent;
+    border-image: url(borderD.png) 30 round;
+    padding: 5px;
 }
