--- a/css/resume.css
+++ b/css/resume.css
@@ -165,3 +165,24 @@ tools-list {
     border-image: url(borderD.png) 30 round;
     padding: 5px;
 }
+
+.no-js #loader {
+    display: none;
+}
+
+.js #loader {
+    display: block;
+    position: absolute;
+    left: 100px;
+    top: 0;
+}
+
+.se-pre-con {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url(https://smallenvelop.com/wp-content/uploads/2014/08/Preloader_11.gif) center no-repeat #181818;
+}
