--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,3 +1,9 @@
+:root {
+    --carousel-height: 400px;
+    --carousel-height-item-curr: 300px;
+    --carousel-height-item: 200px;
+}
+
 body {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding-top: 54px;
@@ -16,7 +22,13 @@ h1 {
     font-size: 48px;
 }
 
+h2 {
+    margin: auto;
+    color: #808080;
+}
+
 .navbar {
+    height: 60px;
     padding-inline: 5%;
 }
 
@@ -60,11 +72,23 @@ h1 {
     background-color: #080808 !important;
 }
 
+.section {
+    width: 100%;
+}
+
 .intro-section {
+    margin-top: -60px;
+    height: 100vh;
     background-image: url(intro_bg.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
+}
+
+.section-content {
+    max-width: 1000px; 
+    margin: auto; 
+    height: 100%;
 }
 
 .intro-list {
@@ -73,4 +97,134 @@ h1 {
     font-size: 14px;
     font-style: italic;
     margin-left: -32px;
+}
+
+a {
+    transition: color .1s ease-in;
+    color: #B0B0B0;
+    text-decoration-line: none;
+}
+
+a:hover {
+    color: #00D0D0;
+}
+
+.carousel {
+    user-select: none;
+    margin-inline: auto;
+    width: 90%;
+    height: var(--carousel-height);
+    overflow: hidden;
+}
+
+.item {
+    background-color: #00D0D0;
+    color: #000000;
+}
+
+.carousel .item {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transition: all 0.3s ease-in-out;
+    height: var(--carousel-height-item);
+    width: 400px;
+    overflow: hidden;
+    background-color: #00D0D0;
+}
+
+.item.curr {
+    height: var(--carousel-height-item-curr);
+    width: 100%;
+    max-width: 480px;
+    opacity: 1;
+    z-index: 99;
+    transform: translate(-50%, -50%);
+}
+
+.item.prev {
+    opacity: 0.4;
+    z-index: 2;
+    transform: translate(-125%, -50%);
+}
+
+.item.next {
+    opacity: 0.4;
+    z-index: 2;
+    transform: translate(25%, -50%);
+}
+
+.item.left {
+    opacity: 0;
+    z-index: 0;
+    transform: translate(-200%, -50%);
+}
+
+.item.right {
+    opacity: 0;
+    z-index: 0;
+    transform: translate(100%, -50%);
+}
+
+.carousel .carousel-button-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 85%;
+    z-index: 100;
+}
+
+.carousel-button-container .carousel-button {
+    color: #ffffff;
+    font-size: 50px;
+    cursor: pointer;
+    position: relative;
+    opacity: 0.5;
+    transition: all 0.1s ease-in-out;
+}
+
+.carousel-button-container .carousel-button:hover {
+    opacity: 0.9;
+}
+
+.carousel-button-container .carousel:before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50px;
+    height: 50px;
+    background-color: #00000000;
+    border-radius: 50%;
+    z-index: -99;
+}
+
+.carousel-button-container .carousel-button:nth-child(1) {
+    float: left;
+}
+
+.carousel-button-container .carousel-button:nth-child(2) {
+    float: right;
+}
+
+.dots {
+    list-style-type: none;
+}
+
+.dots .dot {
+    margin: -2px;
+    transition: all 0.2s ease-in-out;
+    color: #505050;
+    cursor: pointer;
+    font-size: 10px;
+}
+
+.dots .dot:hover {
+    color: #707070;
+}
+
+.dot.selected-dot {
+    color: #D0D0D0;
 }
