--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -274,6 +274,7 @@ a:hover {
     background-color: #202020;
     box-shadow: 0px 0px 20px 5px #303030;
     border-radius: 4px;
+    pointer-events: none;
 }
 
 .carousel .carousel-button-container {
