--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ h2 {
     color: #202020;
 }
 
-.button {
+button {
     transition: all 0.3s ease-in-out;
     margin: auto;
     width: auto;
@@ -147,10 +147,13 @@ h2 {
     border: 1px #303030 solid;
     border-radius: 5px;
     padding: 6px 20px 8px 20px;
+    background-color: transparent;
+    color: #808080;
 }
 
-.button:hover {
-    border-color: #00D0D0
+button:hover {
+    border-color: #00D0D0;
+    color: #00D0D0;
 }
 
 .section {
@@ -166,8 +169,28 @@ h2 {
 
 .footer {
     margin: auto;
-    padding: 2%;
+    padding: 0%;
     color: #505050;
+}
+
+.left-align {
+    margin: auto;
+    justify-content: left;
+    text-align: left;
+}
+
+.right-align {
+    margin: auto;
+    justify-content: right;
+    text-align: right;
+    flex-direction: row-reverse !important;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
 }
 
 @media (max-width: 576px) {
@@ -202,5 +225,15 @@ h2 {
 
     .nav-item.nav-selected {
         background-color: #505050;
+    }
+
+    .left-align {
+        justify-content: center;
+        text-align: center;
+    }
+
+    .right-align {
+        justify-content: center;
+        text-align: center;
     }
 }
